--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCZ 6223/PCZ 6223.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCZ 6223/PCZ 6223.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET LUV 4X2 T/M INYEC</h1>
-            <p class="precio">$7,900</p>
+            <h1>CHERY PRACTIVAN Q22L AC 1.2 5P 4X2 TM</h1>
+            <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2002</span>
-                <span>500 Kms</span>
+                <span>2018</span>
+                <span>71 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -75,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">CHEVROLET</span>
+                    <span class="info-value">CHERY</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">LUV 4X2 T/M INYEC</span>
+                    <span class="info-value">PRACTIVAN Q22L AC 1.2 5P 4X2 TM</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Doble cabina</span>
+                    <span class="info-value">FURGONETA COMERCIAL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">500,000 km</span>
+                    <span class="info-value">71,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2002</span>
+                    <span class="info-value">2018</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Verde</span>
+                    <span class="info-value">PLATEADA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>La Chevrolet LUV 2002 es una pickup robusta con motor 2.5L turbodiésel (85-100 HP dependiendo del mercado), transmisión manual y tracción 4x2. Ideal para trabajo pesado y carga, con cabina espaciosa para 5 pasajeros.</p>
+            <p>La Chery Practivan Q22L 1.2 2018 es una furgoneta compacta con motor 1.2L (86 HP), transmisión manual y aire acondicionado. Diseñada para transporte urbano de carga o pasajeros, combina eficiencia y espacio modular.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/VERDE.mp4" type="video/mp4">
+                        <source src="imgs/FURGO PRACTIVAN.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -180,11 +180,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">1 Multa</span>
+                    <span class="dato-value">0 Multas</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$39.40</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -198,11 +198,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$109.79</span>
+                    <span class="dato-value">$82.21</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">GAD NARANJAL</span>
+                    <span class="dato-value">GAD 24 DE MAYO</span>
                 </div>
             </div>
         </div>
@@ -212,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2022</span>
+                    <span class="dato-value">Impuestos 2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$451.00</span>
+                    <span class="dato-value">$146.00</span>
                 </div>
             </div>
         </div>
@@ -240,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">6 dueños</span>
+                    <span class="dato-value">2 dueños</span>
                 </div>
             </div>
         </div>
