--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -832,7 +832,7 @@
             <!-- HEADER -->
             <div class="popup-header">
                 <h1 class="popup-title">GAVIL MOTORS</h1>
-                <p class="popup-subtitle">OFERTAS EXCLUSIVAS - SOLO POR HOY</p>
+                <p class="popup-subtitle">OFERTAS EXCLUSIVAS - SÀBADO Y DOMINGO</p>
             </div>
             
             <!-- CUERPO PRINCIPAL -->
@@ -858,9 +858,10 @@
             
             <!-- BARRA DE ACCIÓN -->
             <div class="action-bar">
-                <a href="https://wa.me/593988739724?text=¡Hola!%20Vi%20la%20oferta%20de%20GAVIL%20MOTORS%20y%20quiero%20más%20información" class="whatsapp-btn">
-                    <i class="fab fa-whatsapp"></i> WHATSAPP
-                </a>
+                <a href="https://wa.me/593961031665?text=¡Hola!%20Vi%20la%20oferta%20de%20GAVIL%20MOTORS%20y%20quiero%20más%20información" class="whatsapp-btn">
+    <i class="fab fa-whatsapp"></i> WHATSAPP
+</a>
+
                 <div class="car-nav">
                     <button onclick="prevCar()">❮</button>
                     <button onclick="nextCar()">❯</button>
