--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -832,7 +832,7 @@
             <!-- HEADER -->
             <div class="popup-header">
                 <h1 class="popup-title">GAVIL MOTORS</h1>
-                <p class="popup-subtitle">OFERTAS EXCLUSIVAS - SÀBADO Y DOMINGO</p>
+                <p class="popup-subtitle">OFERTAS EXCLUSIVAS - </p>
             </div>
             
             <!-- CUERPO PRINCIPAL -->
@@ -1088,7 +1088,7 @@
                     "193,000 km | Manual",
                     "Motor 2.0L | Año 2014",
                     "Full Equipo: Aire, Vidrios, Alarma",
-                    "Garantía de papeles",
+                    
                     "¡Todo al contado!"
                 ]
             },
