--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCD 5193/PCD 5193.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCD 5193/PCD 5193.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>RENAULT DUSTER EXPRESSION AC 2.0 5P 4X2 TM</h1>
-            <p class="precio">$10,500</p>
+            <h1>RENAULT LOGAN 1.6 M/T</h1>
+            <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2014</span>
-                <span>193 Kms</span>
+                <span>2012</span>
+                <span>220 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -65,7 +65,6 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -80,7 +79,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">DUSTER EXPRESSION AC 2.0 5P 4X2 TM</span>
+                    <span class="info-value">LOGAN 1.6 M/T</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Sedán</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">193,000 km</span>
+                    <span class="info-value">220,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2014</span>
+                    <span class="info-value">2012</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -104,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Crema</span>
+                    <span class="info-value">Negro</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Renault Duster Expression 2.0 2014 es un SUV económico con motor 2.0L (143 HP), transmisión manual y tracción delantera. Versión "Expression" incluye aire acondicionado, dirección asistida y diseño robusto para ciudad o caminos rurales.</p>
+            <p>El Renault Logan 1.6 2012 es un sedán económico con motor 1.6L (90 HP), transmisión manual y amplio maletero (510L). Destaca por su bajo costo de mantenimiento y repuestos accesibles.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/DUSTER.mp4" type="video/mp4">
+                        <source src="imgs/sedan 2012.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -195,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2023</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$82.77</span>
+                    <span class="dato-value">$154.71</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Manabí - Olmedo</span>
                 </div>
             </div>
         </div>
@@ -213,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2025</span>
+                    <span class="dato-value">Impuestos 2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$41.00</span>
+                    <span class="dato-value">$361.00</span>
                 </div>
             </div>
         </div>
