--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCZ 8292/PCZ 8292.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCZ 8292/PCZ 8292.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>RENAULT DUSTER EXPRESSION AC 2.0 5P 4X2 TM</h1>
-            <p class="precio">$10,500</p>
+            <h1>HYUNDAI IONIQ AC 1.6 5P 4X2 TA HYBRID</h1>
+            <p class="precio">$11,500</p>
             <div class="detalles">
-                <span>2014</span>
-                <span>193 Kms</span>
+                <span>2018</span>
+                <span>137 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -65,7 +65,6 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,35 +75,35 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Renault</span>
+                    <span class="info-value">HYUNDAI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">DUSTER EXPRESSION AC 2.0 5P 4X2 TM</span>
+                    <span class="info-value">IONIQ AC 1.6 5P 4X2 TA HYBRID</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">Manual</span>
+                    <span class="info-value">Automatico</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">193,000 km</span>
+                    <span class="info-value">137,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2014</span>
+                    <span class="info-value">2018</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
-                    <span class="info-value">Gasolina</span>
+                    <span class="info-value">Hybrido</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Crema</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Renault Duster Expression 2.0 2014 es un SUV económico con motor 2.0L (143 HP), transmisión manual y tracción delantera. Versión "Expression" incluye aire acondicionado, dirección asistida y diseño robusto para ciudad o caminos rurales.</p>
+            <p>El Hyundai Ioniq Hybrid 2018 es un hatchback eficiente con motor 1.6L GDI + eléctrico (141 HP combinados), transmisión automática de doble embrague y tecnología híbrida. Ideal para ciudad, ofrece etiqueta ECO y bajo consumo.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/DUSTER.mp4" type="video/mp4">
+                        <source src="imgs/ioniq.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -181,11 +180,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">0 Multas</span>
+                    <span class="dato-value">2 Multas</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$206.30</span>
                 </div>
             </div>
         </div>
@@ -195,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2019</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$82.77</span>
+                    <span class="dato-value">$995.06</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">GAD BALZAR</span>
                 </div>
             </div>
         </div>
@@ -213,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2025</span>
+                    <span class="dato-value">Multas y recargos</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$41.00</span>
+                    <span class="dato-value">$524.40</span>
                 </div>
             </div>
         </div>
@@ -227,11 +226,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Total:</span>
-                    <span class="dato-value">0 infracciones</span>
+                    <span class="dato-value">21 infracciones</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$2,539.90</span>
                 </div>
             </div>
         </div>
@@ -241,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">3 dueños</span>
+                    <span class="dato-value">1 dueño</span>
                 </div>
             </div>
         </div>
