--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/LBN 0262/LBN 0262.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/LBN 0262/LBN 0262.html
@@ -50,22 +50,22 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET AVEO ACTIVO 1.6L 4P STD</h1>
-            <p class="precio">$7,500</p>
+            <h1>FIAT PREMIO SL</h1>
+            <p class="precio">$2,900</p>
             <div class="detalles">
-                <span>2009</span>
-                <span>240 Kms</span>
-                <span>Placa: P</span>
+                <span>1994</span>
+                <span>400 Kms</span>
+                <span>Placa: L</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto5.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +76,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">CHEVROLET</span>
+                    <span class="info-value">FIAT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">AVEO ACTIVO 1.6L 4P STD</span>
+                    <span class="info-value">PREMIO SL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -92,11 +92,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">240.000 km</span>
+                    <span class="info-value">400.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2003</span>
+                    <span class="info-value">1994</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -104,11 +104,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Plateado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Pichincha</span>
+                    <span class="info-value">Latacunga</span>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Aveo Activo 1.6L 2009 es una versión con estilo deportivo (alerón, molduras laterales) del sedán básico. Ofrece mecánica sencilla y bajo costo de repuestos, ideal para ciudad.</p>
+            <p>El Fiat Premio SL 1994 es un sedán económico derivado del Fiat Tipo, con mecánica sencilla y amplio espacio interior. Versión "SL" con detalles de confort básicos, ideal para ciudad.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/adsa.mp4" type="video/mp4">
+                        <source src="imgs/FIAT.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -195,15 +195,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$76.56</span>
+                    <span class="dato-value">$77.19</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">QUITO - BICENTENARIO</span>
+                    <span class="dato-value">QUITO - PUERTO QUITO</span>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$276.40</span>
+                    <span class="dato-value">$446.00</span>
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">10 dueños</span>
+                    <span class="dato-value">8 dueños</span>
                 </div>
             </div>
         </div>
