--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PEM 0232/PEM 0232.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PEM 0232/PEM 0232.html
@@ -50,22 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>RENAULT DUSTER EXPRESSION AC 2.0 5P 4X2 TM</h1>
-            <p class="precio">$7,900</p>
+            <h1>CHEVROLET LUV 2.3 CS 4X2 TM</h1>
+            <p class="precio">$5,900</p>
             <div class="detalles">
-                <span>2007</span>
-                <span>215 Kms</span>
+                <span>1998</span>
+                <span>550 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto5.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Nissan</span>
+                    <span class="info-value">Chevrolet</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">X-TRAIL M/T</span>
+                    <span class="info-value">LUV 2.3 CS 4X2 TM</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Cabina Simple</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">215,000 km</span>
+                    <span class="info-value">550,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2007</span>
+                    <span class="info-value">1998</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -104,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Crema</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Nissan X-Trail 2007 es un SUV versátil con motor 2.5L gasolina, transmisión manual de 6 velocidades y opción de tracción 4x4. Ideal para ciudad y aventuras, con amplio espacio interior.</p>
+            <p>"Pickup robusta de trabajo con motor 2.3L gasolina y transmisión manual. Ideal para carga ligera (600-800 kg) y uso rural.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/xtrail.mp4" type="video/mp4">
+                        <source src="imgs/luv 1998.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -195,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2023</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$228.72</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">AGENCIA NACIONAL DE TRANSITO</span>
+                    <span class="dato-value">SAN VICENTE MANABI</span>
                 </div>
             </div>
         </div>
@@ -213,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2023</span>
+                    <span class="dato-value">Impuestos 2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$206.00</span>
+                    <span class="dato-value">$411.00</span>
                 </div>
             </div>
         </div>
