--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/POE 0807/POE 0807.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/POE 0807/POE 0807.html
@@ -50,22 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>TOYOTA HILUX 4X4 CD</h1>
+            <h1>CHEVROLET LUV D-MAX C/S DIESEL 4X2 T/M</h1>
             <p class="precio">$8,900</p>
             <div class="detalles">
-                <span>1998</span>
-                <span>650 Kms</span>
+                <span>2006</span>
+                <span>350 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto5.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg"Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">TOYOTA</span>
+                    <span class="info-value">CHEVROLET</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">HILUX 4X4 CD</span>
+                    <span class="info-value">LUV D-MAX C/S DIESEL 4X2 T/M</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,19 +87,19 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Doble Cabina</span>
+                    <span class="info-value">SIMPLE CABINA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">650.000 km</span>
+                    <span class="info-value">350.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">1998</span>
+                    <span class="info-value">2006</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
-                    <span class="info-value">Gasolina</span>
+                    <span class="info-value">DIESEL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
@@ -126,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/adsa.mp4" type="video/mp4">
+                        <source src="imgs/DMAX.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -195,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$32.35</span>
+                    <span class="dato-value">$108.16</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">GAD SANTO DOMINGO</span>
+                    <span class="dato-value">QUITO - BICENTENARIO</span>
                 </div>
             </div>
         </div>
@@ -213,11 +212,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2025</span>
+                    <span class="dato-value">Impuestos 2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$36.00</span>
+                    <span class="dato-value">$457.80</span>
                 </div>
             </div>
         </div>
@@ -241,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">3 dueños</span>
+                    <span class="dato-value">11 dueños</span>
                 </div>
             </div>
         </div>
