--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PNR 0501/PNR 0501.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PNR 0501/PNR 0501.html
@@ -50,22 +50,22 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET AVEO ACTIVO 1.6L 4P STD</h1>
-            <p class="precio">$7,500</p>
+            <h1>VOLKSWAGEN GOLF GTI</h1>
+            <p class="precio">$3,900</p>
             <div class="detalles">
-                <span>2009</span>
-                <span>240 Kms</span>
+                <span>1995</span>
+                <span>300 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto5.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +76,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">CHEVROLET</span>
+                    <span class="info-value">VOLKSWAGEN </span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">AVEO ACTIVO 1.6L 4P STD</span>
+                    <span class="info-value">GOLF GTI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -88,15 +88,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Hatchback deportivo</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">240.000 km</span>
+                    <span class="info-value">300.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2003</span>
+                    <span class="info-value">1995</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Aveo Activo 1.6L 2009 es una versión con estilo deportivo (alerón, molduras laterales) del sedán básico. Ofrece mecánica sencilla y bajo costo de repuestos, ideal para ciudad.</p>
+            <p>El Golf GTI 1995 (tercera generación) es un ícono deportivo con motor 2.0L y caja manual. Destaca por su manejo ágil y estilo retro. Ideal para coleccionistas o proyectos de restauración. Consumo: 10-12 km/l (ciudad).</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/adsa.mp4" type="video/mp4">
+                        <source src="imgs/GOLF.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -199,11 +199,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$76.56</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">QUITO - BICENTENARIO</span>
+                    <span class="dato-value">LOS RIOS</span>
                 </div>
             </div>
         </div>
@@ -213,11 +213,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Impuestos 2024</span>
+                    <span class="dato-value">Impuestos 2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$276.40</span>
+                    <span class="dato-value">$91.00</span>
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">10 dueños</span>
+                    <span class="dato-value">5 dueños</span>
                 </div>
             </div>
         </div>
