--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GBP 8845/GBP 8845.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GBP 8845/GBP 8845.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">HYBRIDO</span>
+                    <span class="info-value">AUTOMATICA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
