--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/TDA 402/TDA-402.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/TDA 402/TDA-402.html
@@ -51,10 +51,10 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>TOYOTA YARIS 3P</h1>
-            <p class="precio">$6,900</p>
+            <p class="precio">$6,500</p>
             <div class="detalles">
                 <span>2004</span>
-                <span>??? Kms</span>
+                <span>300 Kms</span>
                 <span>Placa: T</span>
             </div>
         </div>
