--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -89,19 +89,19 @@
         <div class="coleccion-grid">
             <!-- Tarjeta 1 -->
             <div class="auto-card">
-                <div class="auto-imagen" style="background-image: url('categorias/STONIC.jpeg')">
+                <div class="auto-imagen" style="background-image: url('categorias/sportage 2017.jpeg')">
 
                     <div class="auto-badge">NUEVO INGRESO</div>
                 </div>
                 <div class="auto-info">
-                    <h3>KIA STONIC LX AC 1.0</h3>
+                    <h3>KIA SPORTAGE SL AC 2.0 5P 4X2 TM</h3>
                     <div class="auto-especificaciones">
-                        <span><i class="fas fa-tachometer-alt"></i> 94,000 km</span>
+                        <span><i class="fas fa-tachometer-alt"></i> 88,000 km</span>
                         <span><i class="fas fa-horse-head"></i> 120 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$15.450 USD</span>
-                        <span class="precio-actual">$13.000 USD</span>
+                        <span class="precio-anterior">$19.990 USD</span>
+                        <span class="precio-actual">$18.500 USD</span>
                     </div>
                     <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PDT 4210/PDT 4210.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
@@ -119,8 +119,8 @@
                         <span><i class="fas fa-horse-head"></i> 113 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$10.999 USD</span>
-                        <span class="precio-actual">$9.900 USD</span>
+                        <span class="precio-anterior">$10.500 USD</span>
+                        <span class="precio-actual">$9.500 USD</span>
                     </div>
                     <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/ABH 3184/ABH 3184.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
