--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -103,7 +103,7 @@
                         <span class="precio-anterior">$19.990 USD</span>
                         <span class="precio-actual">$18.500 USD</span>
                     </div>
-                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PDT 4210/PDT 4210.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
+                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PCT 7932/PCT 7932.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
