--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBN 5202/PBN 5202.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBN 5202/PBN 5202.html
@@ -50,7 +50,7 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>FIAT STRADA FIRE 1242 MPI 8V CB CORTA</h1>
+            <h1>MAZDA2 SEDAN 1.5 MT</h1>
             <p class="precio">$9,600</p>
             <div class="detalles">
                 <span>2011</span>
