--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBM 9665/PBM 9665.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBM 9665/PBM 9665.html
@@ -149,20 +149,20 @@
 
                 <!-- Contactos -->
                 <div class="contacto">
-                    <h2>Contactar</h2>
+                    <h2>Contactar Asesores</h2>
                     <div class="contacto-botones">
-                        <a href="https://wa.me/593998039813" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> Administrador 1 
+                        <a href="https://wa.me/593988739724" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESOR GIAN 
                         </a>
-                        <a href="https://wa.me/593988053605" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> Administrador 2
+                        <a href="https://wa.me/593969008638" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESOR DAVID
                         </a>
                         
-                        <a href="https://www.tiktok.com/@gavilmotors" class="btn-contacto" target="_blank">
-                            <i class="bi bi-tiktok"></i> GAVIL MOTORS
+                        <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
-                        <a href="https://www.tiktok.com/@gavilmotors_promos" class="btn-contacto" target="_blank">
-                            <i class="bi bi-tiktok"></i> GAVIL MOTORS PROMOS
+                        <a href="https://wa.me/593992509493" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESOR ISRAEL
                         </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
