--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GBP 8845/GBP 8845.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GBP 8845/GBP 8845.html
@@ -62,9 +62,11 @@
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO6.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -83,7 +85,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">AUTOMATICA</span>
+                    <span class="info-value">Manual</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
