--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PPB 4230/PPB 4230.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PPB 4230/PPB 4230.html
@@ -65,6 +65,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -125,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/d.mp4" type="video/mp4">
+                        <source src="imgs/TUCSON.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -160,9 +161,6 @@
                         
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
-                        </a>
-                        <a href="https://wa.me/593992509493" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> ASESOR ISRAEL
                         </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
