--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/LBD 5832/LBD 5832.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/LBD 5832/LBD 5832.html
@@ -286,7 +286,7 @@
 document.getElementById('btnAcceso').addEventListener('click', function(e) {
     e.preventDefault();
     
-    const claveCorrecta = "gavilanes258";
+    const claveCorrecta = "gavilmotors";
     const claveIngresada = prompt("🔒 ACCESO AL SISTEMA LEGAL VEHICULAR\nIngrese la clave de autorización:");
     
     if (claveIngresada === claveCorrecta) {
