--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -109,20 +109,20 @@
 
             <!-- Tarjeta 2 -->
             <div class="auto-card destacado">
-                <div class="auto-imagen" style="background-image: url('categorias/TUCSON.jpeg')">
+                <div class="auto-imagen" style="background-image: url('categorias/AMAROK.jpeg')">
                     <div class="auto-badge">MÁS VENDIDO</div>
                 </div>
                 <div class="auto-info">
-                    <h3>TUCSON IX GL 5P 4X2 2.0</h3>
+                    <h3>VOLKSWAGEN AMAROK AC 2.0</h3>
                     <div class="auto-especificaciones">
-                        <span><i class="fas fa-tachometer-alt"></i> 260.000 km</span>
+                        <span><i class="fas fa-tachometer-alt"></i>170.000 km</span>
                         <span><i class="fas fa-horse-head"></i> 187 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$13.700 USD</span>
-                        <span class="precio-actual">$12.500 USD</span>
+                        <span class="precio-anterior">$18.900 USD</span>
+                        <span class="precio-actual">$16.900 USD</span>
                     </div>
-                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PPB 4230/PPB 4230.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
+                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/HBC 4441/HBC 4441.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
