DADA VITARA SOLUTO 2022 MAZDA 626

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/IBA 5821/IBA 5821.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/IBA 5821/IBA 5821.html
@@ -55,7 +55,7 @@
             <div class="detalles">
                 <span>2011</span>
                 <span>188.000 Kms</span>
-                <span>Placa: P</span>
+                <span>Placa: I</span>
             </div>
         </div>
 
