--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/POE 0807/POE 0807.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/POE 0807/POE 0807.html
@@ -65,6 +65,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg"Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg"Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
